<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.yhj.gdscandroidstudy.ui.edit.EditViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/Text_Body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">


        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginVertical="20dp"
            android:onClick="@{() -> vm.clickBackButton()}"
            android:src="@drawable/baseline_keyboard_arrow_left_24" />

        <TextView
            style="@style/Text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_mod_my_info" />


        <androidx.appcompat.widget.AppCompatImageView
            url="@{vm.userPhoto}"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:onClick="@{() -> vm.setRandomPhoto()}"
            android:src="@drawable/ic_konkuk" />

        <TextView
            style="@style/Text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@{vm.name}" />

        <TextView
            style="@style/Text_Body_Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/user_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:text="@string/about_mod_info" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Text_Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_nick_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:text="@={vm.editableName}" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Text_Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_proflie_Image" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_select" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:onClick="@{() -> vm.saveName()}"
            android:text="@string/btn_save" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>

