<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.yhj.gdscandroidstudy.ui.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start_8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="8dp" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_end_8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="8dp" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/Text_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/title_mypage"
                    app:layout_constraintStart_toEndOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_user_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/ic_konkuk"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_user_name"
                    style="@style/Text_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@{vm.name}"
                    app:layout_constraintBottom_toTopOf="@id/tv_email"
                    app:layout_constraintStart_toEndOf="@id/iv_user_profile"
                    app:layout_constraintTop_toTopOf="@id/iv_user_profile"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/Text_Body_Gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
                    app:layout_constraintStart_toStartOf="@id/tv_user_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

                <TextView
                    android:id="@+id/tv_organ_title"
                    style="@style/Text_Body_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/title_organization"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_user_profile" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_organ"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="@id/gl_end_8dp"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_organ_title">

                    <TextView
                        style="@style/Text_Body_Bold"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:text="완료한 투두: 2개" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_organ" />

                <TextView
                    android:id="@+id/tv_title_recent_noti"
                    style="@style/Text_Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/btn_recent_noti"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/cv_organ" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_recent_noti"
                    app:layout_constraintEnd_toEndOf="@id/gl_end_8dp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_recent_noti" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="#cccccc"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_recent_noti" />

                <LinearLayout
                    android:id="@+id/ll_mod_my_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> vm.onClickEdit()}"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@id/gl_end_8dp"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_recent_noti">

                    <TextView
                        style="@style/Text_Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_mod_my_info" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_right_24" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="#cccccc"
                    app:layout_constraintTop_toBottomOf="@id/ll_mod_my_info" />

                <TextView
                    android:id="@+id/tv_notification"
                    style="@style/Text_Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/btn_notification"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/ll_mod_my_info" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintBottom_toBottomOf="@id/tv_notification"
                    app:layout_constraintEnd_toEndOf="@id/gl_end_8dp"
                    app:layout_constraintTop_toTopOf="@id/tv_notification" />

                <TextView
                    android:id="@+id/tv_version"
                    style="@style/Text_Body_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/string_version"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_notification" />

                <TextView
                    style="@style/Text_Body_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_version_target"
                    app:layout_constraintBottom_toBottomOf="@id/tv_version"
                    app:layout_constraintEnd_toEndOf="@id/gl_end_8dp"
                    app:layout_constraintTop_toTopOf="@id/tv_version" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="#cccccc"
                    app:layout_constraintTop_toBottomOf="@id/tv_version" />

                <TextView
                    android:id="@+id/tv_logout"
                    style="@style/Text_Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/btn_logout"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_version" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintBottom_toBottomOf="@id/tv_logout"
                    app:layout_constraintEnd_toEndOf="@id/gl_end_8dp"
                    app:layout_constraintTop_toTopOf="@id/tv_logout" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="#cccccc"
                    app:layout_constraintTop_toBottomOf="@id/tv_logout" />

                <TextView
                    android:id="@+id/tv_delete_account"
                    style="@style/Text_Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/btn_delete_account"
                    app:layout_constraintStart_toStartOf="@id/gl_start_8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_logout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:layout_constraintBottom_toBottomOf="@id/tv_delete_account"
                    app:layout_constraintEnd_toEndOf="@id/gl_end_8dp"
                    app:layout_constraintTop_toTopOf="@id/tv_delete_account" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
